--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
         </div>
 
+        <div class="row mt-5">
+
+            <p class="col bg-warning text-primary fs-4 border border-5 border-black">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quis, aut natus
+                officiis officia labore aspernatur eveniet magni blanditiis non nulla esse accusantium 
+                tempora quaerat optio cumque ab beatae doloremque.
+            </p>
+
+        </div>
+
     </header>
     
 </body>
